--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ nav {
 
 /* Banner */
 .banner {
-    background: url('../assests/images/nainoa-shizuru-unsplash-blur\ \(1\).jpg') no-repeat center center/cover;
+    background: url('./assests/images/nainoa-shizuru-unsplash-blur\ \(1\).jpg') no-repeat center center/cover;
     text-align: center;
     color: rgb(254, 252, 252);
     height: 100vh;
